# RVC-Tundra

./: .gitignore  Dockerfile  INSTALL.md  README.md  config.py  download.py  infer-realtime.py  infer-web.py  infer.py  pyproject.toml  requirements.txt  rvc_realtime.py
lib/globals/: globals.py
lib/infer/infer_libs/train/: utils.py
lib/infer/modules/train/: train.py
lib/infer/modules/vc/: modules.py  pipeline.py
src/infer/: simple_pipeline.py
tabs/: resources.py  tts.py
