[project]
name = ""
version = ""
description = ""
authors = [
    {name = "n/a", email = ""},
]
dependencies = [
    "torch==2.0.1+cu118",
    "torchvision==0.15.2+cu118",
    "torchaudio==2.0.2+cu118",
    "setuptools<70.0.0,>=69.0.2",
    "pydantic<3.0.0,>=2.5.2",
    "fairseq<1.0.0,>=0.12.2",
    "wheel<1.0.0,>=0.41.3",
    "google-auth-oauthlib<2.0.0,>=1.1.0",
    "pedalboard<1.0.0,>=0.8.6",
    "pydub<1.0.0,>=0.25.1",
    "httpx<1.0.0,>=0.25.1",
    "faiss-cpu<2.0.0,>=1.7.4",
    "ffmpeg-python<1.0.0,>=0.2.0",
    "ffmpy<1.0.0,>=0.3.1",
    "websockets==11.0.3",
    "librosa<1.0.0,>=0.10.1",
    "llvmlite<1.0.0,>=0.41.1",
    "elevenlabs<1.0.0,>=0.2.26",
    "gtts<3.0.0,>=2.4.0",
    "wget<4.0,>=3.2",
    "psutil<6.0.0,>=5.9.6",
    "matplotlib<4.0.0,>=3.8.2",
    "mega-py<2.0.0,>=1.0.8",
    "gdown @ git+https://github.com/wkentaro/gdown.git",
    "edge-tts<7.0.0,>=6.1.9",
    "nltk<4.0.0,>=3.8.1",
    "noisereduce<4.0.0,>=3.0.0",
    "unidecode<2.0.0,>=1.3.7",
    "numba<1.0.0,>=0.58.1",
    "numpy<2.0.0,>=1.26.2",
    "onnxruntime<2.0.0,>=1.16.3",
    "onnxruntime-gpu<2.0.0,>=1.16.3",
    "opencv-python<5.0.0.0,>=4.8.1.78",
    "opencv-python-headless<5.0.0.0,>=4.8.1.78",
    "pandas<3.0.0,>=2.1.3",
    "praat-parselmouth<1.0.0,>=0.4.3",
    "pysimplegui<5.0.0,>=4.60.5",
    "pyworld<1.0.0,>=0.3.4",
    "requests<3.0.0,>=2.31.0",
    "resampy<1.0.0,>=0.4.2",
    "scikit-learn<2.0.0,>=1.3.2",
    "scipy<2.0.0,>=1.11.4",
    "sounddevice<1.0.0,>=0.4.6",
    "soundfile<1.0.0,>=0.12.1",
    "tensorboard<3.0.0,>=2.15.1",
    "torchcrepe<1.0.0,>=0.0.22",
    "torchgen<1.0.0,>=0.0.1",
    "tqdm<5.0.0,>=4.66.1",
    "python-dotenv<2.0.0,>=1.0.0",
    "av<12.0.0,>=11.0.0",
    "fastapi<1.0.0,>=0.104.1",
    "protobuf==4.23.4",
    "tensorboardx<3.0.0.0,>=2.6.2.2",
    "gin<1.0.0,>=0.1.6",
    "gin-config<1.0.0,>=0.5.0",
    "flask-cors<5.0.0,>=4.0.0",
    "flask<4.0.0,>=3.0.0",
    "gradio==3.50.2",
]
requires-python = ">=3.9,<3.11"
readme = "README.md"
license = {text = "UNLICENSED"}

[[tool.pdm.source]]
type = "find_links"
url = "https://download.pytorch.org/whl/cu118/torch_stable.html"
name = "torch"


[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
